Refactor Activities